--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://3.110.175.254:8081/repository/cerner-release/</url>
+	      <url>http://3.110.175.254:8081/repository/cerner-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
